git-svn-id: https://svn.kuali.org/repos/foundation/trunk@2078 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/deploy-artifact/pom.xml
+++ b/deploy-artifact/pom.xml
@@ -60,26 +60,26 @@
                 <requireProperty>
                   <property>deployment.groupId</property>
                   <message>You must provide a group id</message>
-                  <regex>^\d(.)*</regex>
-                  <regexMessage>Version must begin with a number</regexMessage>
+                  <regex>^\S+$</regex>
+                  <regexMessage>You must provide a group id</regexMessage>
                 </requireProperty>
                 <requireProperty>
                   <property>deployment.artifactId</property>
                   <message>You must provide an artifact id</message>
                   <regex>^\d(.)*</regex>
-                  <regexMessage>Version must begin with a number</regexMessage>
+                  <regexMessage>You must provide an artifact id</regexMessage>
                 </requireProperty>
                 <requireProperty>
                   <property>deployment.version</property>
                   <message>You must provide a version</message>
                   <regex>^\d(.)*</regex>
-                  <regexMessage>Version must begin with a number</regexMessage>
+                  <regexMessage>You must provide a version</regexMessage>
                 </requireProperty>
                 <requireProperty>
                   <property>deployment.file</property>
                   <message>You must provide a file</message>
                   <regex>^\d(.)*</regex>
-                  <regexMessage>Version must begin with a number</regexMessage>
+                  <regexMessage>You must provide a file</regexMessage>
                 </requireProperty>
               </rules>
               <fail>true</fail>
