--- a/deploy-artifact/pom.xml
+++ b/deploy-artifact/pom.xml
@@ -48,6 +48,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-enforcer-plugin</artifactId>
+        <version>1.0.1</version>
         <executions>
           <execution>
             <id>enforce-property</id>
@@ -66,19 +67,19 @@
                 <requireProperty>
                   <property>deployment.artifactId</property>
                   <message>You must provide an artifact id</message>
-                  <regex>^\d(.)*</regex>
+                  <regex>^\S+$</regex>
                   <regexMessage>You must provide an artifact id</regexMessage>
                 </requireProperty>
                 <requireProperty>
                   <property>deployment.version</property>
                   <message>You must provide a version</message>
-                  <regex>^\d(.)*</regex>
+                  <regex>^\S+$</regex>
                   <regexMessage>You must provide a version</regexMessage>
                 </requireProperty>
                 <requireProperty>
                   <property>deployment.file</property>
                   <message>You must provide a file</message>
-                  <regex>^\d(.)*</regex>
+                  <regex>^\S+$</regex>
                   <regexMessage>You must provide a file</regexMessage>
                 </requireProperty>
               </rules>
