git-svn-id: https://svn.kuali.org/repos/foundation/trunk@2084 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/maven-oracle-plugin/src/test/resources/pom.xml
+++ b/maven-oracle-plugin/src/test/resources/pom.xml
@@ -18,10 +18,10 @@
         <version>${project.version}</version>
         <executions>
           <execution>
-            <id>test</id>
+            <id>genscript</id>
             <phase>initialize</phase>
             <goals>
-              <goal>deployjars</goal>
+              <goal>genscript</goal>
             </goals>
           </execution>
         </executions>
