--- a/maven-oracle-plugin/pom.xml
+++ b/maven-oracle-plugin/pom.xml
@@ -35,6 +35,11 @@
       <version>3.0.3</version>
     </dependency>
     <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.0.1</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-plugin-api</artifactId>
       <version>3.0.3</version>
