--- a/maven-oracle-plugin/src/test/resources/pom.xml
+++ b/maven-oracle-plugin/src/test/resources/pom.xml
@@ -16,6 +16,9 @@
         <groupId>org.kuali.maven.plugins</groupId>
         <artifactId>maven-oracle-plugin</artifactId>
         <version>${project.version}</version>
+        <configuration>
+          <scriptFile>./deploy-jars.sh</scriptFile>
+        </configuration>
         <executions>
           <execution>
             <id>genscript</id>
