--- a/maven-oracle-plugin/pom.xml
+++ b/maven-oracle-plugin/pom.xml
@@ -8,7 +8,7 @@
   </parent>
   <groupId>org.kuali.maven.plugins</groupId>
   <artifactId>maven-oracle-plugin</artifactId>
-  <version>1.0.1</version>
+  <version>1.0.2-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
   <name>Maven Oracle Plugin</name>
   <description>Tooling related to Oracle</description>
@@ -16,9 +16,9 @@
     <kuali.slf4j.version>1.6.1</kuali.slf4j.version>
   </properties>
   <scm>
-    <connection>scm:svn:http://svn.kuali.org/repos/foundation/tags/maven-oracle-plugin-1.0.1</connection>
-    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/tags/maven-oracle-plugin-1.0.1</developerConnection>
-    <url>http://svn.kuali.org/repos/foundation/tags/maven-oracle-plugin-1.0.1</url>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-oracle-plugin</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-oracle-plugin</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/trunk/maven-oracle-plugin</url>
   </scm>
   <build>
     <testResources>
