Tomcat directory cleanup
git-svn-id: https://svn.kuali.org/repos/foundation/trunk@2113 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ec2admin/build.xml
+++ b/ec2admin/build.xml
@@ -44,10 +44,8 @@
     </copy>
     <copy file="src/main/resources/rice.keystore" tofile="/home/${tomcat.user}/kuali/main/${environment}/rice.keystore" overwrite="true" />
     <mkdir dir="${catalina.base}" />
-    <mkdir dir="${catalina.base}/common" />
+    <mkdir dir="${catalina.base}/lib" />
     <mkdir dir="${catalina.base}/logs" />
-    <mkdir dir="${catalina.base}/server" />
-    <mkdir dir="${catalina.base}/shared" />
     <mkdir dir="${catalina.base}/temp" />
     <mkdir dir="${catalina.base}/webapps" />
     <copy todir="${catalina.base}/conf">
