--- a/deploy-artifact/pom.xml
+++ b/deploy-artifact/pom.xml
@@ -42,6 +42,24 @@
             <file>${deployment.file}</file>
           </configuration>
         </plugin>
+        <plugin>
+          <groupId>org.kuali.maven.plugins</groupId>
+          <artifactId>maven-oracle-plugin</artifactId>
+          <version>1.0.2</version>
+          <configuration>
+            <scriptFile>./deploy-oracle-jars.sh</scriptFile>
+            <versions>11.2.0.3</versions>
+          </configuration>
+          <executions>
+            <execution>
+              <id>genscript</id>
+              <phase>generate-resources</phase>
+              <goals>
+                <goal>genscript</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
       </plugins>
     </pluginManagement>
     <plugins>
@@ -146,6 +164,17 @@
                 </configuration>
               </execution>
             </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>genscript</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.kuali.maven.plugins</groupId>
+            <artifactId>maven-oracle-plugin</artifactId>
           </plugin>
         </plugins>
       </build>
