--- a/kc/kcparm30/deploy.cfg
+++ b/kc/kcparm30/deploy.cfg
@@ -1,10 +1,11 @@
-svnLocation=kc_project/branches/kc_project-3_1_1
+svnLocation=kc_project/trunk
 deployURL=test.kc.kuali.org:/opt/kc/parm30/webapps/kc-parm30.war
 configURL=test.kc.kuali.org:~/kuali/main/parm30/
 
 dbType=oracle
 dbMode=bundled
-dbParent=311stg
+dbParent=400stg
+dbImportMasks=multicampus/KR_*_??S?.sql multicampus/KC_*_??S?.sql
 import.torque.database.user=kcparm30
 import.torque.database.schema=kcparm30
 import.torque.database.password=parm174kc
