--- a/kc/kcparm30/deploy.cfg
+++ b/kc/kcparm30/deploy.cfg
@@ -4,8 +4,8 @@ configURL=test.kc.kuali.org:~/kuali/main/parm30/
 
 dbType=oracle
 dbMode=bundled
-dbParent=400stg
-dbImportMasks=multicampus/KR_*_??S?.sql multicampus/KC_*_??S?.sql
+dbParent=dba
+dbImportMasks=KRC_*_B000.sql KC_*_B000.sql KRC_*_??S?.sql KC_*_??S?.sql multicampus/KR_*_??S?.sql multicampus/KC_*_??S?.sql
 import.torque.database.user=kcparm30
 import.torque.database.schema=kcparm30
 import.torque.database.password=parm174kc
