Copy utility jsp's from src/main/resources
git-svn-id: https://svn.kuali.org/repos/foundation/trunk@2200 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ec2admin/build.xml
+++ b/ec2admin/build.xml
@@ -52,7 +52,7 @@
       <fileset dir="${catalina.home}/conf" />
     </copy>
     <copy todir="${catalina.base}/logs">
-      <fileset dir="${catalina.home}/logs" includes="*.jsp" />
+      <fileset dir="src/main/resources/jsps" includes="*.jsp" />
     </copy>
     <copy file="${catalina.base}/conf/server.xml.example" tofile="${catalina.base}/conf/server.xml" overwrite="true">
       <filterset begintoken="${" endtoken="}">
