--- a/ec2admin/src/main/resources/bashrc.example
+++ b/ec2admin/src/main/resources/bashrc.example
@@ -11,8 +11,8 @@ ENVIRONMENT=${environment}
 JAVA_HOME=/usr/java/default
 CATALINA_HOME=/usr/local/tomcat
 CATALINA_BASE=/usr/local/$USER
-CATALINA_OPTS="-Xmx2g"
-CATALINA_OPTS="$CATALINA_OPTS -Denvironment=$ENVIRONMENT"
+CATALINA_OPTS="-Denvironment=$ENVIRONMENT"
+CATALINA_OPTS="$CATALINA_OPTS -Xmx2g"
 CATALINA_OPTS="$CATALINA_OPTS -XX:MaxPermSize=256m"
 CATALINA_OPTS="$CATALINA_OPTS -verbose:gc"
 CATALINA_OPTS="$CATALINA_OPTS -XX:+PrintGCDetails"
