git-svn-id: https://svn.kuali.org/repos/foundation/trunk@2229 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ec2admin/src/main/resources/bashrc.example
+++ b/ec2admin/src/main/resources/bashrc.example
@@ -12,8 +12,8 @@ JAVA_HOME=/usr/java/default
 CATALINA_HOME=/usr/local/tomcat
 CATALINA_BASE=/usr/local/$USER
 CATALINA_OPTS="-Denvironment=$ENVIRONMENT"
-CATALINA_OPTS="$CATALINA_OPTS -Xmx2G"
-CATALINA_OPTS="$CATALINA_OPTS -XX:MaxPermSize=256M"
+CATALINA_OPTS="$CATALINA_OPTS -Xmx2g"
+CATALINA_OPTS="$CATALINA_OPTS -XX:MaxPermSize=256m"
 CATALINA_OPTS="$CATALINA_OPTS -verbose:gc"
 CATALINA_OPTS="$CATALINA_OPTS -XX:+PrintGCDetails"
 CATALINA_OPTS="$CATALINA_OPTS -XX:+PrintGCDateStamps"
