git-svn-id: https://svn.kuali.org/repos/foundation/trunk@2250 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ec2admin/build.xml
+++ b/ec2admin/build.xml
@@ -59,7 +59,10 @@
       <fileset dir="${catalina.home}/conf" />
     </copy>
     <copy todir="${catalina.base}/logs">
-      <fileset dir="src/main/resources/jsps" includes="*.jsp" />
+      <fileset dir="src/main/resources/apache-tomcat/logs" />
+    </copy>
+    <copy todir="${catalina.base}/bin">
+      <fileset dir="src/main/resources/apache-tomcat/bin" />
     </copy>
     <copy todir="${catalina.base}/conf" overwrite="true">
       <fileset dir="src/main/resources/apache-tomcat/${tomcat.version}/conf" />
