git-svn-id: https://svn.kuali.org/repos/foundation/trunk@2252 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ec2admin/build.xml
+++ b/ec2admin/build.xml
@@ -83,6 +83,10 @@
       <arg value="${tomcat.user}:tomcat" />
       <arg value="/home/${tomcat.user}" />
     </exec>
+    <exec executable="chmod">
+      <arg value="755" />
+      <arg value="${catalina.base}/bin/*.sh" />
+    </exec>
   </target>
 
   <target name="remove" depends="init">
