git-svn-id: https://svn.kuali.org/repos/foundation/trunk@2255 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ec2admin/build.xml
+++ b/ec2admin/build.xml
@@ -1,5 +1,5 @@
 <project name="Tomcat Instance Manager">
-  <description>Manage the creating/removing of Tomcat instances on a ec2 deployment server</description>
+  <description>Manage the creating/removing of Tomcat instances on an ec2 deployment server</description>
   <taskdef resource="net/sf/antcontrib/antcontrib.properties" />
 
   <property name="environment" value="ec2" />
