--- a/ec2admin/src/main/resources/bashrc.example
+++ b/ec2admin/src/main/resources/bashrc.example
@@ -11,6 +11,7 @@ ENVIRONMENT=${environment}
 JAVA_HOME=/usr/java/default
 CATALINA_HOME=/usr/local/tomcat
 CATALINA_BASE=/usr/local/$USER
+CATALINA_PID=$CATALINA_BASE/logs/catalina.pid
 CATALINA_OPTS="-Denvironment=$ENVIRONMENT"
 CATALINA_OPTS="$CATALINA_OPTS -Xms512m"
 CATALINA_OPTS="$CATALINA_OPTS -Xmx2g"
@@ -23,5 +24,5 @@ CATALINA_OPTS="$CATALINA_OPTS -XX:+PrintTenuringDistribution"
 CATALINA_OPTS="$CATALINA_OPTS -Xloggc:$CATALINA_BASE/logs/heap.log"
 
 PATH=$JAVA_HOME/bin:$CATALINA_HOME/bin:$PATH
-export JAVA_HOME PATH CATALINA_HOME CATALINA_BASE CATALINA_OPTS ENVIRONMENT
+export JAVA_HOME PATH CATALINA_HOME CATALINA_BASE CATALINA_OPTS CATALINA_PID ENVIRONMENT
 
