--- a/ec2admin/pom.xml
+++ b/ec2admin/pom.xml
@@ -10,7 +10,8 @@
   express or implied. See the License for the specific language governing
   permissions and limitations under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.kuali</groupId>
@@ -66,7 +67,69 @@
             </dependency>
           </dependencies>
         </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-dependency-plugin</artifactId>
+          <version>2.3</version>
+          <executions>
+            <execution>
+              <id>get-tomcat</id>
+              <phase>initialize</phase>
+              <goals>
+                <goal>copy</goal>
+                <goal>unpack</goal>
+              </goals>
+              <configuration>
+                <localRepositoryDirectory>target/repository</localRepositoryDirectory>
+                <artifactItems>
+                  <artifactItem>
+                    <groupId>${deploy.groupId}</groupId>
+                    <artifactId>${deploy.artifactId}</artifactId>
+                    <version>${deploy.version}</version>
+                    <type>${deploy.type}</type>
+                    <includes>**/MANIFEST.MF</includes>
+                  </artifactItem>
+                </artifactItems>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
+  <profiles>
+    <profile>
+      <id>tomcat</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>get-tomcat</id>
+                <phase>process-resources</phase>
+                <goals>
+                  <goal>copy</goal>
+                  <goal>unpack</goal>
+                </goals>
+                <configuration>
+                  <localRepositoryDirectory>target/repository</localRepositoryDirectory>
+                  <artifactItems>
+                    <artifactItem>
+                      <groupId>org.apache.tomcat</groupId>
+                      <artifactId>apache-tomcat</artifactId>
+                      <version>${tomcat.version}</version>
+                      <type>zip</type>
+                      <excludes>**/webapps/*</excludes>
+                    </artifactItem>
+                  </artifactItems>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
