git-svn-id: https://svn.kuali.org/repos/foundation/trunk@2272 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ec2admin/pom.xml
+++ b/ec2admin/pom.xml
@@ -100,6 +100,9 @@
   <profiles>
     <profile>
       <id>tomcat</id>
+      <properties>
+        <tomcat.version>7.0.22</tomcat.version>
+      </properties>
       <build>
         <plugins>
           <plugin>
