--- a/ec2admin/pom.xml
+++ b/ec2admin/pom.xml
@@ -102,7 +102,8 @@
                       <artifactId>apache-tomcat</artifactId>
                       <version>${tomcat.version}</version>
                       <type>zip</type>
-                      <excludes>**/webapps</excludes>
+                      <includes>*</includes>
+                      <excludes>**/webapps/*</excludes>
                     </artifactItem>
                   </artifactItems>
                 </configuration>
