git-svn-id: https://svn.kuali.org/repos/foundation/trunk@2276 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ec2admin/pom.xml
+++ b/ec2admin/pom.xml
@@ -102,7 +102,7 @@
                       <artifactId>apache-tomcat</artifactId>
                       <version>${tomcat.version}</version>
                       <type>zip</type>
-                      <includes>*</includes>
+                      <includes>**/*</includes>
                       <excludes>**/webapps/*</excludes>
                     </artifactItem>
                   </artifactItems>
