git-svn-id: https://svn.kuali.org/repos/foundation/trunk@2278 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ec2admin/pom.xml
+++ b/ec2admin/pom.xml
@@ -80,6 +80,7 @@
       <id>tomcat</id>
       <properties>
         <tomcat.version>7.0.22</tomcat.version>
+        <tomcat.artifactId>apache-tomcat</tomcat.artifactId>
       </properties>
       <build>
         <plugins>
