git-svn-id: https://svn.kuali.org/repos/foundation/trunk@2279 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ec2admin/build.xml
+++ b/ec2admin/build.xml
@@ -82,6 +82,16 @@
     </exec>
   </target>
 
+  <target name="removetomcat" depends="init">
+    <property name="tomcat.user" value="tomcat${instance}" />
+    <property name="catalina.base" value="/usr/local/tomcat${instance}" />
+    <exec executable="userdel">
+      <arg value="-rf" />
+      <arg value="${tomcat.user}" />
+    </exec>
+    <delete dir="${catalina.base}" />
+  </target>
+
   <target name="remove" depends="init">
     <property name="tomcat.user" value="tomcat${instance}" />
     <property name="catalina.base" value="/usr/local/tomcat${instance}" />
@@ -90,6 +100,18 @@
       <arg value="${tomcat.user}" />
     </exec>
     <delete dir="${catalina.base}" />
+  </target>
+
+  <target name="tomcatinit">
+    <condition property="tomcat.set">
+      <and>
+        <isset property="catalina.home" />
+        <isset property="tomcat.zip" />
+      </and>
+    </condition>
+    <fail unless="tomcat.set">
+      Must specify catalina.home and tomcat.zip
+    </fail>
   </target>
 
   <target name="init">
