git-svn-id: https://svn.kuali.org/repos/foundation/trunk@2280 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ec2admin/build.xml
+++ b/ec2admin/build.xml
@@ -82,14 +82,14 @@
     </exec>
   </target>
 
-  <target name="removetomcat" depends="init">
-    <property name="tomcat.user" value="tomcat${instance}" />
-    <property name="catalina.base" value="/usr/local/tomcat${instance}" />
-    <exec executable="userdel">
-      <arg value="-rf" />
-      <arg value="${tomcat.user}" />
-    </exec>
-    <delete dir="${catalina.base}" />
+  <target name="removetomcat" depends="tomcatinit">
+    <delete dir="${catalina.home}" />
+    <unzip src="${tomcat.zip" dest="${catalina.home}">
+      <patternset>
+        <include name="**/*" />
+        <exclude name="**/webapps/*" />
+      </patternset>
+    </unzip>
   </target>
 
   <target name="remove" depends="init">
