git-svn-id: https://svn.kuali.org/repos/foundation/trunk@2281 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ec2admin/pom.xml
+++ b/ec2admin/pom.xml
@@ -85,7 +85,6 @@
       <build>
         <plugins>
           <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-dependency-plugin</artifactId>
             <executions>
               <execution>
@@ -107,6 +106,17 @@
                 </configuration>
               </execution>
             </executions>
+          </plugin>
+          <plugin>
+            <artifactId>maven-antrun-plugin</artifactId>
+            <configuration>
+              <target>
+                <ant antfile="build.xml" target="installtomcat">
+                  <param name="" value="" />
+                  <param name="" value="" />
+                </ant>
+              </target>
+            </configuration>
           </plugin>
         </plugins>
       </build>
