git-svn-id: https://svn.kuali.org/repos/foundation/trunk@2282 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ec2admin/pom.xml
+++ b/ec2admin/pom.xml
@@ -112,8 +112,8 @@
             <configuration>
               <target>
                 <ant antfile="build.xml" target="installtomcat">
-                  <param name="" value="" />
-                  <param name="" value="" />
+                  <param name="catalina.home" value="/usr/local/" />
+                  <param name="tomcat.zip" value="target/dependency/${tomcat.artifactId}-${tomcat.version}" />
                 </ant>
               </target>
             </configuration>
