git-svn-id: https://svn.kuali.org/repos/foundation/trunk@2283 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ec2admin/pom.xml
+++ b/ec2admin/pom.xml
@@ -109,14 +109,23 @@
           </plugin>
           <plugin>
             <artifactId>maven-antrun-plugin</artifactId>
-            <configuration>
-              <target>
-                <ant antfile="build.xml" target="installtomcat">
-                  <param name="catalina.home" value="/usr/local/" />
-                  <param name="tomcat.zip" value="target/dependency/${tomcat.artifactId}-${tomcat.version}" />
-                </ant>
-              </target>
-            </configuration>
+            <executions>
+              <execution>
+                <id>unzip-tomcat</id>
+                <phase>process-resources</phase>
+                <goals>
+                  <goal>run</goal>
+                </goals>
+                <configuration>
+                  <target>
+                    <ant antfile="build.xml" target="installtomcat">
+                      <param name="catalina.home" value="/usr/local/" />
+                      <param name="tomcat.zip" value="target/dependency/${tomcat.artifactId}-${tomcat.version}" />
+                    </ant>
+                  </target>
+                </configuration>
+              </execution>
+            </executions>
           </plugin>
         </plugins>
       </build>
