git-svn-id: https://svn.kuali.org/repos/foundation/trunk@2284 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ec2admin/build.xml
+++ b/ec2admin/build.xml
@@ -5,6 +5,11 @@
   <property name="environment" value="ec2" />
   <property name="tomcat.version" value="7.0.22" />
 
+  <target name="intalltomcat">
+    <antcall target="removetomcat" />
+    <antcall target="unziptomcat" />
+  </target>
+
   <target name="resetall">
     <antcall target="removeall" />
     <antcall target="createall" />
@@ -82,7 +87,7 @@
     </exec>
   </target>
 
-  <target name="removetomcat" depends="tomcatinit">
+  <target name="unziptomcat" depends="tomcatinit">
     <delete dir="${catalina.home}" />
     <unzip src="${tomcat.zip" dest="${catalina.home}">
       <patternset>
