--- a/ec2admin/pom.xml
+++ b/ec2admin/pom.xml
@@ -81,6 +81,7 @@
       <properties>
         <tomcat.version>7.0.22</tomcat.version>
         <tomcat.artifactId>apache-tomcat</tomcat.artifactId>
+        <tomcat.zip>target/dependency/${tomcat.artifactId}-${tomcat.version}</tomcat.zip>
       </properties>
       <build>
         <plugins>
@@ -118,10 +119,7 @@
                 </goals>
                 <configuration>
                   <target>
-                    <ant antfile="build.xml" target="installtomcat">
-                      <param name="catalina.home" value="/usr/local/" />
-                      <param name="tomcat.zip" value="target/dependency/${tomcat.artifactId}-${tomcat.version}" />
-                    </ant>
+                    <ant antfile="build.xml" target="installtomcat" />
                   </target>
                 </configuration>
               </execution>
