--- a/ec2admin/build.xml
+++ b/ec2admin/build.xml
@@ -5,7 +5,7 @@
   <property name="environment" value="ec2" />
   <property name="tomcat.version" value="7.0.22" />
 
-  <target name="intalltomcat">
+  <target name="installtomcat">
     <antcall target="removetomcat" />
     <antcall target="unziptomcat" />
   </target>
