git-svn-id: https://svn.kuali.org/repos/foundation/trunk@2288 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ec2admin/pom.xml
+++ b/ec2admin/pom.xml
@@ -81,7 +81,7 @@
       <properties>
         <tomcat.version>7.0.22</tomcat.version>
         <tomcat.artifactId>apache-tomcat</tomcat.artifactId>
-        <tomcat.zip>target/dependency/${tomcat.artifactId}-${tomcat.version}</tomcat.zip>
+        <tomcat.zip>target/dependency/${tomcat.artifactId}-${tomcat.version}.zip</tomcat.zip>
       </properties>
       <build>
         <plugins>
