git-svn-id: https://svn.kuali.org/repos/foundation/trunk@2289 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ec2admin/build.xml
+++ b/ec2admin/build.xml
@@ -84,7 +84,7 @@
 
   <target name="installtomcat" depends="tomcatinit">
     <delete dir="/usr/local" />
-    <unzip src="${tomcat.zip}" dest="${catalina.home}">
+    <unzip src="${tomcat.zip}" dest="/usr/local">
       <patternset>
         <include name="**/*" />
         <exclude name="**/webapps/*" />
