git-svn-id: https://svn.kuali.org/repos/foundation/trunk@2294 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ec2admin/build.xml
+++ b/ec2admin/build.xml
@@ -83,7 +83,7 @@
   </target>
 
   <target name="installtomcat" depends="tomcatinit">
-    <delete dir="/usr/local" />
+    <delete dir="${tomcat.dir}" />
     <unzip src="${tomcat.zip}" dest="/usr/local">
       <patternset>
         <include name="**/*" />
@@ -106,10 +106,11 @@
     <condition property="tomcat.set">
       <and>
         <isset property="tomcat.zip" />
+        <isset property="tomcat.dir" />
       </and>
     </condition>
     <fail unless="tomcat.set">
-      Must specify tomcat.zip
+      Must specify tomcat.dir and tomcat.zip
     </fail>
   </target>
 
