--- a/ec2admin/pom.xml
+++ b/ec2admin/pom.xml
@@ -82,6 +82,7 @@
         <tomcat.version>7.0.22</tomcat.version>
         <tomcat.artifactId>apache-tomcat</tomcat.artifactId>
         <tomcat.zip>target/dependency/${tomcat.artifactId}-${tomcat.version}.zip</tomcat.zip>
+        <tomcat.dir>/usr/local/${tomcat.artifactId}-${tomcat.version}</tomcat.dir>
       </properties>
       <build>
         <plugins>
@@ -99,7 +100,7 @@
                   <artifactItems>
                     <artifactItem>
                       <groupId>org.apache.tomcat</groupId>
-                      <artifactId>apache-tomcat</artifactId>
+                      <artifactId>${tomcat.artifactId}</artifactId>
                       <version>${tomcat.version}</version>
                       <type>zip</type>
                     </artifactItem>
