git-svn-id: https://svn.kuali.org/repos/foundation/trunk@2295 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ec2admin/build.xml
+++ b/ec2admin/build.xml
@@ -84,12 +84,9 @@
 
   <target name="installtomcat" depends="tomcatinit">
     <delete dir="${tomcat.dir}" />
-    <unzip src="${tomcat.zip}" dest="/usr/local">
-      <patternset>
-        <include name="**/*" />
-        <exclude name="**/webapps/*" />
-      </patternset>
-    </unzip>
+    <unzip src="${tomcat.zip}" dest="/usr/local" />
+    <delete dir="${tomcat.dir}/webapps" />
+    <mkdir dir="${tomcat.dir}/webapps" />
   </target>
 
   <target name="remove" depends="init">
