--- a/ec2admin/build.xml
+++ b/ec2admin/build.xml
@@ -91,16 +91,10 @@
       <fileset dir="src/main/resources/apache-tomcat/jsps" />
     </copy>
     <copy todir="${tomcat.dir}/bin">
-      <fileset dir="src/main/resources/apache-tomcat/bin" />
+      <fileset dir="src/main/resources/apache-tomcat/root/bin" />
     </copy>
     <copy todir="${tomcat.dir}/conf" overwrite="true">
-      <fileset dir="src/main/resources/apache-tomcat/${tomcat.version}/conf" />
-      <filterset begintoken="${" endtoken="}">
-        <filter token="tomcat.shutdown.port" value="${tomcat.shutdown.port}" />
-        <filter token="tomcat.http.port" value="${tomcat.http.port}" />
-        <filter token="tomcat.https.port" value="${tomcat.https.port}" />
-        <filter token="catalina.base" value="${catalina.base}" />
-      </filterset>
+      <fileset dir="src/main/resources/apache-tomcat/${tomcat.version}/root/conf" />
     </copy>
   </target>
 
