--- a/ec2admin/build.xml
+++ b/ec2admin/build.xml
@@ -88,10 +88,13 @@
     <delete dir="${tomcat.dir}/webapps" />
     <mkdir dir="${tomcat.dir}/webapps" />
     <copy todir="${tomcat.dir}/logs">
-      <fileset dir="src/main/resources/apache-tomcat/jsps" />
+      <fileset dir="src/main/resources/apache-tomcat/logs" />
     </copy>
     <copy todir="${tomcat.dir}/bin">
       <fileset dir="src/main/resources/apache-tomcat/root/bin" />
+    </copy>
+    <copy todir="${tomcat.dir}/conf" overwrite="true">
+      <fileset dir="src/main/resources/apache-tomcat/${tomcat.version}/conf" />
     </copy>
     <copy todir="${tomcat.dir}/conf" overwrite="true">
       <fileset dir="src/main/resources/apache-tomcat/${tomcat.version}/root/conf" />
