git-svn-id: https://svn.kuali.org/repos/foundation/trunk@2307 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ec2admin/pom.xml
+++ b/ec2admin/pom.xml
@@ -42,6 +42,9 @@
     <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/ec2admin</developerConnection>
     <url>http://svn.kuali.org/repos/foundation/trunk/ec2admin</url>
   </scm>
+  <properties>
+    <kuali.testjar.phase>none</kuali.testjar.phase>
+  </properties>
   <build>
     <pluginManagement>
       <plugins>
