git-svn-id: https://svn.kuali.org/repos/foundation/trunk@2308 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ec2admin/build.xml
+++ b/ec2admin/build.xml
@@ -93,6 +93,7 @@
     <copy todir="${tomcat.dir}/bin">
       <fileset dir="src/main/resources/apache-tomcat/root/bin" />
     </copy>
+    <chmod dir="${tomcat.dir}/bin" perm="755" includes="*.sh" />
     <copy todir="${tomcat.dir}/conf" overwrite="true">
       <fileset dir="src/main/resources/apache-tomcat/${tomcat.version}/conf" />
     </copy>
