--- a/ec2admin/build.xml
+++ b/ec2admin/build.xml
@@ -90,6 +90,9 @@
     <copy todir="${tomcat.dir}/logs">
       <fileset dir="src/main/resources/apache-tomcat/logs" />
     </copy>
+    <delete>
+      <fileset dir="${tomcat.dir}/bin" includes="*.bat" />
+    </delete>
     <copy todir="${tomcat.dir}/bin">
       <fileset dir="src/main/resources/apache-tomcat/root/bin" />
     </copy>
