git-svn-id: https://svn.kuali.org/repos/foundation/trunk@2310 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ec2admin/build.xml
+++ b/ec2admin/build.xml
@@ -43,7 +43,7 @@
       <arg value="tomcat" />
       <arg value="${tomcat.user}" />
     </exec>
-    <copy file="src/main/resources/bashrc.example" tofile="/home/${tomcat.user}/.bashrc" overwrite="true">
+    <copy file="src/main/resources/.bashrc" tofile="/home/${tomcat.user}/.bashrc" overwrite="true">
       <filterset begintoken="${" endtoken="}">
         <filter token="environment" value="${environment}" />
       </filterset>
