git-svn-id: https://svn.kuali.org/repos/foundation/trunk@2312 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ec2admin/build.xml
+++ b/ec2admin/build.xml
@@ -83,26 +83,36 @@
   </target>
 
   <target name="installtomcat" depends="tomcatinit">
+    <!-- Remove previous installation of this version (if any) -->
     <delete dir="${tomcat.dir}" />
+
+    <!-- Inflate the zip into /usr/local/apache-tomcat-[version] -->
     <unzip src="${tomcat.zip}" dest="/usr/local" />
+
+    <!-- Delete/recreate the webapps directory to remove the pre-installed apps -->
     <delete dir="${tomcat.dir}/webapps" />
     <mkdir dir="${tomcat.dir}/webapps" />
-    <copy todir="${tomcat.dir}/logs">
-      <fileset dir="src/main/resources/apache-tomcat/logs" />
-    </copy>
-    <delete>
-      <fileset dir="${tomcat.dir}/bin" includes="*.bat" />
-    </delete>
+
+    <!-- Clean up the bin directory, add some simple shell scripts, and make *.sh executable -->
     <copy todir="${tomcat.dir}/bin">
       <fileset dir="src/main/resources/apache-tomcat/root/bin" />
     </copy>
     <chmod dir="${tomcat.dir}/bin" perm="755" includes="*.sh" />
-    <copy todir="${tomcat.dir}/conf" overwrite="true">
-      <fileset dir="src/main/resources/apache-tomcat/${tomcat.version}/conf" />
+    <delete>
+      <fileset dir="${tomcat.dir}/bin" includes="*.bat" />
+    </delete>
+
+    <!-- Copy in our utility JSP's -->
+    <copy todir="${tomcat.dir}/logs">
+      <fileset dir="src/main/resources/apache-tomcat/logs" />
     </copy>
-    <copy todir="${tomcat.dir}/conf" overwrite="true">
-      <fileset dir="src/main/resources/apache-tomcat/${tomcat.version}/root/conf" />
-    </copy>
+
+    <!-- Copy in our modified versions of server.xml and web.xml -->
+    <property name="root.server.xml" value="src/main/resources/apache-tomcat/${tomcat.version}/root/conf/server.xml" />
+    <property name="root.web.xml" value="src/main/resources/apache-tomcat/${tomcat.version}/conf/web.xml" />
+
+    <copy file="${root.server.xml}" tofile="${tomcat.dir}/conf/server.xml" overwrite="true" />
+    <copy file="${root.web.xml}" tofile="${tomcat.dir}/conf/web.xml" overwrite="true" />
   </target>
 
   <target name="remove" depends="init">
