--- a/ec2admin/build.xml
+++ b/ec2admin/build.xml
@@ -113,6 +113,9 @@
 
     <copy file="${root.server.xml}" tofile="${tomcat.dir}/conf/server.xml" overwrite="true" />
     <copy file="${root.web.xml}" tofile="${tomcat.dir}/conf/web.xml" overwrite="true" />
+
+    <!-- Final step is to symlink /usr/local/tomcat to the versioned tomcat directory -->
+    <symlink link="/usr/local/tomcat" resource="${tomcat.dir}" />
   </target>
 
   <target name="remove" depends="init">
