git-svn-id: https://svn.kuali.org/repos/foundation/trunk@2315 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ec2admin/build.xml
+++ b/ec2admin/build.xml
@@ -133,10 +133,11 @@
       <and>
         <isset property="tomcat.zip" />
         <isset property="tomcat.dir" />
+        <isset property="tomcat.version" />
       </and>
     </condition>
     <fail unless="tomcat.set">
-      Must specify tomcat.dir and tomcat.zip
+      Must specify tomcat.dir, tomcat.zip, and tomcat.version
     </fail>
   </target>
 
