--- a/ec2admin/pom.xml
+++ b/ec2admin/pom.xml
@@ -116,7 +116,7 @@
             <artifactId>maven-antrun-plugin</artifactId>
             <executions>
               <execution>
-                <id>unzip-tomcat</id>
+                <id>install-tomcat</id>
                 <phase>process-resources</phase>
                 <goals>
                   <goal>run</goal>
