git-svn-id: https://svn.kuali.org/repos/foundation/trunk@2319 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ec2admin/build.xml
+++ b/ec2admin/build.xml
@@ -82,6 +82,8 @@
   </target>
 
   <target name="installtomcat" depends="tomcatinit">
+    <symlink action="delete" link="/usr/local/tomcat" />
+
     <!-- Remove previous installation of this version (if any) -->
     <delete dir="${tomcat.dir}" />
 
