--- a/ec2admin/pom.xml
+++ b/ec2admin/pom.xml
@@ -44,7 +44,8 @@
   </scm>
   <properties>
     <kuali.testjar.phase>none</kuali.testjar.phase>
-    <tomcat.version>7.0.22</tomcat.version>
+    <tomcat.major.version>7</tomcat.major.version>
+    <tomcat.version>${tomcat.major.version}.0.22</tomcat.version>
     <tomcat.artifactId>apache-tomcat</tomcat.artifactId>
     <tomcat.zip>target/dependency/${tomcat.artifactId}-${tomcat.version}.zip</tomcat.zip>
     <tomcat.dir>/usr/local/${tomcat.artifactId}-${tomcat.version}</tomcat.dir>
