git-svn-id: https://svn.kuali.org/repos/foundation/trunk@2326 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ec2admin/build.xml
+++ b/ec2admin/build.xml
@@ -136,10 +136,11 @@
         <isset property="tomcat.zip" />
         <isset property="tomcat.dir" />
         <isset property="tomcat.version" />
+        <isset property="tomcat.major.version" />
       </and>
     </condition>
     <fail unless="tomcat.set">
-      Must specify tomcat.dir, tomcat.zip, and tomcat.version
+      Must specify tomcat.dir, tomcat.zip, tomcat.major.version, and tomcat.version
     </fail>
   </target>
 
