git-svn-id: https://svn.kuali.org/repos/foundation/trunk@2328 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ec2admin/build.xml
+++ b/ec2admin/build.xml
@@ -110,8 +110,8 @@
     </copy>
 
     <!-- Copy in our modified versions of server.xml and web.xml -->
-    <property name="root.server.xml" value="src/main/resources/apache-tomcat/${tomcat.version}/root/conf/server.xml" />
-    <property name="root.web.xml" value="src/main/resources/apache-tomcat/${tomcat.version}/conf/web.xml" />
+    <property name="root.server.xml" value="src/main/resources/apache-tomcat/${tomcat.major.version}/root/conf/server.xml" />
+    <property name="root.web.xml" value="src/main/resources/apache-tomcat/${tomcat.major.version}/conf/web.xml" />
 
     <copy file="${root.server.xml}" tofile="${tomcat.dir}/conf/server.xml" overwrite="true" />
     <copy file="${root.web.xml}" tofile="${tomcat.dir}/conf/web.xml" overwrite="true" />
