--- a/ec2admin/pom.xml
+++ b/ec2admin/pom.xml
@@ -85,6 +85,13 @@
   </build>
   <profiles>
     <profile>
+      <id>6</id>
+      <properties>
+        <tomcat.major.version>6</tomcat.major.version>
+        <tomcat.version>6.0.33</tomcat.version>
+      </properties>
+    </profile>
+    <profile>
       <id>tomcat</id>
       <build>
         <plugins>
