--- a/ec2admin/pom.xml
+++ b/ec2admin/pom.xml
@@ -88,7 +88,7 @@
       <id>6</id>
       <properties>
         <tomcat.major.version>6</tomcat.major.version>
-        <tomcat.version>6.0.33</tomcat.version>
+        <tomcat.version>${tomcat.major.version}.0.33</tomcat.version>
       </properties>
     </profile>
     <profile>
