--- a/ec2admin/pom.xml
+++ b/ec2admin/pom.xml
@@ -44,6 +44,7 @@
   </scm>
   <properties>
     <kuali.testjar.phase>none</kuali.testjar.phase>
+    <environment>ec2</environment>
     <tomcat.major.version>7</tomcat.major.version>
     <tomcat.version>${tomcat.major.version}.0.22</tomcat.version>
     <tomcat.artifactId>apache-tomcat</tomcat.artifactId>
@@ -84,6 +85,13 @@
     </pluginManagement>
   </build>
   <profiles>
+    <profile>
+      <id>6</id>
+      <properties>
+        <tomcat.major.version>6</tomcat.major.version>
+        <tomcat.version>${tomcat.major.version}.0.33</tomcat.version>
+      </properties>
+    </profile>
     <profile>
       <id>6</id>
       <properties>
