--- a/ec2admin/pom.xml
+++ b/ec2admin/pom.xml
@@ -86,6 +86,27 @@
   </build>
   <profiles>
     <profile>
+      <id>resetall</id>
+      <properties>
+        <target>resetall</target>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-antrun-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>resetall</id>
+                <goals>
+                  <goal>run</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
       <id>6</id>
       <properties>
         <tomcat.major.version>6</tomcat.major.version>
