git-svn-id: https://svn.kuali.org/repos/foundation/trunk@2336 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ec2admin/pom.xml
+++ b/ec2admin/pom.xml
@@ -57,6 +57,11 @@
         <plugin>
           <artifactId>maven-antrun-plugin</artifactId>
           <version>1.6</version>
+          <configuration>
+            <target>
+              <ant antfile="build.xml" target="${target}" />
+            </target>
+          </configuration>
           <dependencies>
             <dependency>
               <groupId>ant-contrib</groupId>
@@ -92,14 +97,10 @@
             <executions>
               <execution>
                 <id>resetall</id>
+                <phase>process-resources</phase>
                 <goals>
                   <goal>run</goal>
                 </goals>
-                <configuration>
-                  <target>
-                    <ant antfile="build.xml" target="${target}" />
-                  </target>
-                </configuration>
               </execution>
             </executions>
           </plugin>
