git-svn-id: https://svn.kuali.org/repos/foundation/trunk@2337 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ec2admin/build.xml
+++ b/ec2admin/build.xml
@@ -59,7 +59,7 @@
       <fileset dir="src/main/resources/apache-tomcat/jsps" />
     </copy>
     <copy todir="${catalina.base}/conf" overwrite="true">
-      <fileset dir="src/main/resources/apache-tomcat/${tomcat.version}/conf" />
+      <fileset dir="src/main/resources/apache-tomcat/${tomcat.major.version}/conf" />
       <filterset begintoken="${" endtoken="}">
         <filter token="tomcat.shutdown.port" value="${tomcat.shutdown.port}" />
         <filter token="tomcat.http.port" value="${tomcat.http.port}" />
